--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
-    "react-intersection-observer": "^9.16.0"
+    "react-intersection-observer": "^9.16.0",
+    "resend": "^6.4.2",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.15",
