--- a/package.json
+++ b/package.json
@@ -21,22 +21,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
     "framer-motion": "^12.23.24",
     "next": "16.0.0",
-    "react": "19.2.0",
+    "react": "^19.0.0",
     "react-countup": "^6.5.3",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "resend": "^6.4.2",
-    "zod": "^4.1.12"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.15",
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.9.5",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "postcss": "^8.5.6",
